header html sass

--- a/template/header.html
+++ b/template/header.html
@@ -1,3 +1,15 @@
-<div class="header__inner">
-    <h2>Header content</h2>
+<div class="top-bar">
+    <!-- logo -->
+     <div class="logo">
+        <img src="./asset/icons/logo.svg" class="logo__img" alt="Gorcery Mart Logo" id="Logo">
+        <h1 class="logo__title">grocerymart</h1>
+     </div>
+     <!-- Navbar -->
+      <nav class="navbar">
+          <ul>
+            <li><a href="" class="navbar__link">Departments <img src="./asset/icons/arrow-down.svg" alt="Departments"></a></li>
+            <li><a href="" class="navbar__link">Grocery<img src="./asset/icons/arrow-down.svg" alt="Departments"></a></li>
+            <li><a href="" class="navbar__link">Beauty<img src="./asset/icons/arrow-down.svg" alt="Departments"></a></li>
+          </ul>
+      </nav>
 </div>
