--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -3,10 +3,33 @@
 ::after {
   box-sizing: border-box;
 }
+:root{
+  --text-color:#1a162e;
+  --icon-color:brightness(0) saturate(100%) invert(8%) sepia(8%) saturate(5318%) hue-rotate(212deg) brightness(96%) contrast(95%);
+ 
+}
 html {
   font-size: 62.5%;
 }
 body {
   font-size: 1.6rem;
   font-family: Gordita, sans-serif;
+  color: var(--text-color);
+}
+a {
+  color: inherit;
+  text-decoration: none;
+}
+button{
+  border: none;
+  outline: none;
+  background: transparent;
+}
+button,input,textarea,select {
+  font-family: inherit;
+  font-size: inherit;
+  color: inherit;
+}
+.icon{
+  filter: var(--icon-color);
 }
