--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,1 +1,71 @@
+%flexItemCenter{
+    display: flex;
+    align-items: center;
+}
+.header{
+    // background: #eeeeee;
+    background: #f0a6a6;
+}
+.top-bar{
+    @extend %flexItemCenter;
+    padding: 30px 0;
+}
+.navbar{
+    margin-left: 144px;
+    margin-right: auto;
+    &__list{
+        @extend %flexItemCenter;
+        gap: 30px;
 
+    }
+    &__link{
+        @extend %flexItemCenter;
+        gap: 6px;
+        font-size: 15px;
+        font-style: normal;
+        font-weight: 500;
+        line-height:  146.667%;
+    }
+    &__arrow{
+        margin-top: 4px;
+    }
+    
+}
+.top-act{
+    @extend %flexItemCenter;
+    gap: 20px;
+    &__group{
+        @extend %flexItemCenter;
+        min-width: 50px;
+        height: 50px;
+        border-radius: 8px;
+        background: var(--Secondary-Color-Background, #FFF);
+        box-shadow: 0px 20px 60px 10px rgba(237, 237, 246, 0.20);
+    }
+    &__group--single &__btn{
+        padding: 13px;
+    }
+      
+    &__btn{
+        @extend %flexItemCenter;
+        gap: 10px;
+        padding: 13px 20px;
+        cursor: pointer;
+    }
+    &__title{
+        font-size: 15px;
+        font-weight: 500;
+        line-height: 146.667%;
+    }
+    &__separate{
+        width: 1px;
+        height: 30px;
+        background: #7777a0;
+    }
+    &__avatar{
+        display: block; // xóa bỏ phần chân ảnh
+        width: 50px;
+        height: 50px;
+        border-radius: 8px;
+    }
+}
