--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -4,7 +4,7 @@
 }
 .header{
     // background: #eeeeee;
-    background: #f0a6a6;
+    background: var(--header-bg-color);
 }
 .top-bar{
     @extend %flexItemCenter;
@@ -39,8 +39,8 @@
         min-width: 50px;
         height: 50px;
         border-radius: 8px;
-        background: var(--Secondary-Color-Background, #FFF);
-        box-shadow: 0px 20px 60px 10px rgba(237, 237, 246, 0.20);
+        background: var(--top-act-group-bg-color);
+        box-shadow: 0px 20px 60px 10px var(--top-act-group-shadow);
     }
     &__group--single &__btn{
         padding: 13px;
@@ -60,7 +60,7 @@
     &__separate{
         width: 1px;
         height: 30px;
-        background: #7777a0;
+        background: var(--top-act-group-separate);
     }
     &__avatar{
         display: block; // xóa bỏ phần chân ảnh
