--- a/template/header.html
+++ b/template/header.html
@@ -17,17 +17,17 @@
          <div class="top-act">
           <div class="top-act__group top-act__group--single">
             <button class="top-act__btn">
-              <img src="./asset/icons/search.svg" alt="" class="top-act__icon">
+              <img src="./asset/icons/search.svg" alt="" class="icon top-act__icon">
             </button>
           </div>
           <div class="top-act__group">
             <button class="top-act__btn">
-              <img src="./asset/icons/heart.svg" alt="" class="top-act__icon">
+              <img src="./asset/icons/heart.svg" alt="" class="icon top-act__icon">
               <span class="icon top-act__title">03</span>
             </button>
             <div class="top-act__separate"></div>
             <button class="top-act__btn">
-              <img src="./asset/icons/cart.svg" alt="" class="top-act__icon">
+              <img src="./asset/icons/cart.svg" alt="" class="icon top-act__icon">
               <span class="icon top-act__title">$65.42</span>
             </button>
           </div>
