create mixin responsive

--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,3 +1,5 @@
+@use "../abstracts";
+
 %flexItemCenter{
     display: flex;
     align-items: center;
@@ -5,6 +7,9 @@
 .header{
     // background: #eeeeee;
     background: var(--header-bg-color);
+    @include abstracts.breakpoint(lg){
+        width: 100px;
+    }
 }
 .top-bar{
     @extend %flexItemCenter;
