--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -7,17 +7,33 @@
 .header{
     // background: #eeeeee;
     background: var(--header-bg-color);
-    @include abstracts.breakpoint(lg){
-        width: 100px;
-    }
+    
 }
 .top-bar{
     @extend %flexItemCenter;
     padding: 30px 0;
+    &__more{
+        display:none;
+        @include abstracts.breakpoint(lg){
+         display: block
+        }
+        
+    }
+    @include abstracts.breakpoint(lg){
+        padding: 20px 0;
+    }
+    @include abstracts.breakpoint(sm){
+        padding: 16px 0;
+    }
 }
 .navbar{
     margin-left: 144px;
-    margin-right: auto;
+    @include abstracts.breakpoint(xl){
+        margin-left: 50px;
+    }
+    @include abstracts.breakpoint(lg){
+       display: none
+    }
     &__list{
         @extend %flexItemCenter;
         gap: 30px;
@@ -38,6 +54,7 @@
 }
 .top-act{
     @extend %flexItemCenter;
+    margin-left: auto;
     gap: 20px;
     &__group{
         @extend %flexItemCenter;
@@ -46,6 +63,14 @@
         border-radius: 8px;
         background: var(--top-act-group-bg-color);
         box-shadow: 0px 20px 60px 10px var(--top-act-group-shadow);
+        @include abstracts.breakpoint(md){
+         display: none;
+        }
+    }
+    &__group--single{
+        @include abstracts.breakpoint(lg){
+       display: none
+    }
     }
     &__group--single &__btn{
         padding: 13px;
