--- a/template/header.html
+++ b/template/header.html
@@ -1,5 +1,9 @@
 <div class="container">
   <div class="top-bar">
+      <!-- More -->
+       <button class="top-bar__more">
+        <img src="./asset/icons/more.svg" alt="menu" class="icon top-bar__more-icon">
+       </button>
       <!-- logo --> 
        <a href="./" class="logo">
           <img src="./asset/icons/logo.svg" class="logo__img" alt="Gorcery Mart Logo" id="Logo">
