--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -143,6 +143,7 @@ body {
   font-size: 1.6rem;
   font-family: Gordita, sans-serif;
   color: var(--text-color);
+  background: var(--body-bg-color);
 }
 
 a {
@@ -1201,18 +1202,25 @@ html.dark {
   --text-color:#fff;
   --icon-color: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(119deg) brightness(107%) contrast(106%);
   --header-bg-color:#171C28;
+  --body-bg-color:#292e39;
   --top-act-group-bg-color:#292E39;
   --top-act-group-shadow:rgba(0, 0, 0, 0.20);
   --top-act-group-separate:#EDEDF6;
 }
 
 html {
-  --text-color:green;
+  --text-color:#1A162E;
   --icon-color:brightness(0) saturate(100%) invert(8%) sepia(8%) saturate(5318%) hue-rotate(212deg) brightness(96%) contrast(95%);
-  --header-bg-color:#f0a6a6;
+  --header-bg-color:#EEE;
+  --body-bg-color:#F6f6f6;
   --top-act-group-bg-color:#fff;
   --top-act-group-shadow:rgba(237, 237, 246, 0.20);
   --top-act-group-separate:#c1c1db;
+}
+@media (max-width: 991.98px) {
+  html {
+    --header-bg-color:#fff;
+  }
 }
 
 .top-act__btn, .top-act__group, .top-act, .navbar__link, .navbar__list, .top-bar {
@@ -1242,6 +1250,7 @@ html {
 }
 @media (max-width: 575.98px) {
   .top-bar {
+    justify-content: space-between;
     padding: 16px 0;
   }
 }
@@ -1274,8 +1283,13 @@ html {
 }
 
 .top-act {
-  margin-left: auto;
   gap: 20px;
+  margin-left: auto;
+}
+@media (max-width: 575.98px) {
+  .top-act {
+    margin-left: 0px;
+  }
 }
 .top-act__group {
   min-width: 50px;
