fix responsive, nabar, logo

--- a/scss/components/_logo.scss
+++ b/scss/components/_logo.scss
@@ -6,7 +6,10 @@
     gap: 14px;
     @include abstracts.breakpoint(lg) {
     gap: 10px;
-    margin-left: 39px;
+    margin-left: 40px;
+    }
+    @include abstracts.breakpoint(md) {
+    margin-left: 0;
     }
     &__title{
         font-size: 22px;
