--- a/templates/header.html
+++ b/templates/header.html
@@ -11,10 +11,29 @@
        </a>
        <!-- Navbar -->
         <nav class="navbar">
-            <ul class="navbar__list">
-              <li><a href="#" class="navbar__link">Departments <img src="./asset/icons/arrow-down.svg" alt="Departments" class="icon navbar__arrow"></a></li>
-              <li><a href="#" class="navbar__link">Grocery<img src="./asset/icons/arrow-down.svg" alt="Grocery" class="icon navbar__arrow"></a></li>
-              <li><a href="#" class="navbar__link">Beauty<img src="./asset/icons/arrow-down.svg" alt="Beauty" class="icon navbar__arrow"></a></li>
+            <ul class="navbar__list js-dropdown-list">
+              <li class="navbar__item">
+                <a href="#" class="navbar__link">Departments <img src="./asset/icons/arrow-down.svg" alt="Departments" class="icon navbar__arrow"></a>
+              <div class="dropdown">
+                <div class="dropdown__inner">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae ea minima rerum velit quasi, quia et qui quaerat cupiditate! Consequuntur autem amet consectetur nisi aliquam quaerat assumenda sapiente sed tempore.
+                </div>
+              </div>
+              </li>
+              <li class="navbar__item"><a href="#" class="navbar__link">Grocery<img src="./asset/icons/arrow-down.svg" alt="Grocery" class="icon navbar__arrow"></a>
+              <div class="dropdown">
+                <div class="dropdown__inner">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae ea minima rerum velit quasi, quia et qui quaerat cupiditate! Consequuntur autem amet consectetur nisi aliquam quaerat assumenda sapiente sed tempore.
+                </div>
+              </div>
+              </li>
+              <li class="navbar__item"><a href="#" class="navbar__link">Beauty<img src="./asset/icons/arrow-down.svg" alt="Beauty" class="icon navbar__arrow"></a>
+              <div class="dropdown">
+                <div class="dropdown__inner">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae ea minima rerum velit quasi, quia et qui quaerat cupiditate! Consequuntur autem amet consectetur nisi aliquam quaerat assumenda sapiente sed tempore.
+                </div>
+              </div>
+              </li>
             </ul>
         </nav>
         <!-- Actions -->
