--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -11,6 +11,7 @@
 }
 .top-bar{
     @extend %flexItemCenter;
+    position: relative;
     padding: 30px 0;
     &__more{
         display:none;
@@ -38,12 +39,24 @@
     }
     &__list{
         @extend %flexItemCenter;
-        gap: 30px;
 
+    }
+    &__item{
+        &:first-child a{
+            padding-left: 0;
+        }
+        &:last-child a{
+            padding-right: 0;
+        }
+        &:hover .dropdown{
+            display: block;
+        }
     }
     &__link{
         @extend %flexItemCenter;
         gap: 6px;
+        height: 50px;
+        padding: 0 15px;
         font-size: 15px;
         font-style: normal;
         font-weight: 500;
@@ -54,27 +67,27 @@
     }
 }
 .top-act{
-    @extend %flexItemCenter;
-    gap: 20px;
-    @include abstracts.breakpoint(sm){
-        margin-left: 0;
-    } 
-    margin-left:auto;
-    &__group{
         @extend %flexItemCenter;
-        min-width: 50px;
-        height: 50px;
-        border-radius: 8px;
-        background: var(--top-act-group-bg-color);
-        box-shadow: 0px 20px 60px 10px var(--top-act-group-shadow);
-        @include abstracts.breakpoint(md){
-         display: none;
+        gap: 20px;
+        margin-left:auto;
+        @include abstracts.breakpoint(sm){
+            margin-left: 0;
+        } 
+        &__group{
+            @extend %flexItemCenter;
+            min-width: 50px;
+            height: 50px;
+            border-radius: 8px;
+            background: var(--top-act-group-bg-color);
+            box-shadow: 0px 20px 60px 10px var(--top-act-group-shadow);
+            @include abstracts.breakpoint(md){
+            display: none;
+            }
         }
-    }
-    &__group--single{
-        @include abstracts.breakpoint(lg){
-       display: none;
-    }
+        &__group--single{
+            @include abstracts.breakpoint(lg){
+        display: none;
+        }
     }
     &__group--single &__btn{
         padding: 13px;
