--- a/scss/main.css
+++ b/scss/main.css
@@ -1206,9 +1206,6 @@ html.dark {
   --top-act-group-bg-color:#292E39;
   --top-act-group-shadow:rgba(0, 0, 0, 0.20);
   --top-act-group-separate:#EDEDF6;
-  --dropdown-bg-color:#2f3441;
-  --dropdown-shadow-color:rgba(23, 28, 40, 0.4);
-  --dropdown-arrow-color: brightness(0) saturate(100%) invert(14%) sepia(6%) saturate(2671%) hue-rotate(186deg) brightness(97%) contrast(81%);
 }
 
 html {
@@ -1275,19 +1272,12 @@ html {
     display: none;
   }
 }
-.navbar__item:first-child a {
-  padding-left: 0;
-}
-.navbar__item:last-child a {
-  padding-right: 0;
-}
-.navbar__item:hover .dropdown {
-  display: block;
+.navbar__list {
+  gap: 30px;
 }
 .navbar__link {
-  gap: 6px;
   height: 50px;
-  padding: 0 15px;
+  gap: 6px;
   font-size: 15px;
   font-style: normal;
   font-weight: 500;
@@ -1383,25 +1373,18 @@ html {
 .dropdown {
   position: absolute;
   left: 0;
-  width: min(1240px, 100%);
   padding-top: 50px;
 }
 .dropdown__inner {
   position: relative;
-  height: min(582px, 100vh - 158px);
   padding: 30px;
   border-radius: 20px;
-  background: var(--dropdown-bg-color);
+  background: #ccafaf;
   box-shadow: 0px 40px 90px 20px --dropdown-bg-color;
-  border: 1px solid;
 }
 .dropdown__inner::before {
-  content: url(../icons/dropdown-arrow.svg);
   position: absolute;
-  top: -13px;
-  left: var(--arrow-left-pos);
-  translate: -50%;
-  filter: var(--dropdown-arrow-color);
-}
-
-/*# sourceMappingURL=main.css.map */
+  content: url("../images/dropdown-arrow.svg");
+  left: 350px;
+  top: -15px;
+}/*# sourceMappingURL=main.css.map */
