create menu icon column mega

--- a/templates/header.html
+++ b/templates/header.html
@@ -16,7 +16,15 @@
                 <a href="#" class="navbar__link">Departments <img src="./asset/icons/arrow-down.svg" alt="Departments" class="icon navbar__arrow"></a>
               <div class="dropdown">
                 <div class="dropdown__inner">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae ea minima rerum velit quasi, quia et qui quaerat cupiditate! Consequuntur autem amet consectetur nisi aliquam quaerat assumenda sapiente sed tempore.
+                  <div class="top-menu">
+                    <div class="top-menu__main">
+                      <div class="menu-column">
+                        <div class="menu-column__icon">
+                          
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
               </li>
