--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -1209,6 +1209,7 @@ html.dark {
   --dropdown-bg-color:#2f3441;
   --dropdown-shadow-color:rgba(23, 28, 40, 0.4);
   --dropdown-arrow-color: brightness(0) saturate(100%) invert(14%) sepia(6%) saturate(2671%) hue-rotate(186deg) brightness(97%) contrast(81%);
+  --top-menu-border-color: #171c28;
 }
 
 html {
@@ -1221,6 +1222,7 @@ html {
   --top-act-group-separate:#c1c1db;
   --dropdown-bg-color:#fff;
   --dropdown-shadow-color:rgba(200, 200, 200, 0.4);
+  --top-menu-border-color: #d2d1d6;
 }
 @media (max-width: 991.98px) {
   html {
@@ -1402,6 +1404,16 @@ html {
   left: var(--arrow-left-pos);
   translate: -50%;
   filter: var(--dropdown-arrow-color);
+}
+
+.top-menu {
+  height: 100%;
+  background: var(--top-menu-border-color);
+}
+.top-menu__main {
+  width: 292px;
+  height: 100%;
+  border-right: 1px solid;
 }
 
 /*# sourceMappingURL=main.css.map */
