--- a/scss/components/_dropdown.scss
+++ b/scss/components/_dropdown.scss
@@ -22,3 +22,12 @@
         }
     }
 }
+.top-menu{
+    height: 100%;
+    background: var(--top-menu-border-color);
+    &__main{
+        width: 292px;
+        height: 100%;
+        border-right: 1px solid;
+    }
+}
