--- a/scss/themes/_dark.scss
+++ b/scss/themes/_dark.scss
@@ -10,4 +10,5 @@ html.dark{
   --dropdown-bg-color:#2f3441;
   --dropdown-shadow-color:rgba(23, 28, 40, 0.4);
   --dropdown-arrow-color: brightness(0) saturate(100%) invert(14%) sepia(6%) saturate(2671%) hue-rotate(186deg) brightness(97%) contrast(81%);
+  --top-menu-border-color: #171c28;
 }
