--- a/templates/header.html
+++ b/templates/header.html
@@ -18,9 +18,19 @@
                 <div class="dropdown__inner">
                   <div class="top-menu">
                     <div class="top-menu__main">
+                      <!-- Menu column -->
                       <div class="menu-column">
                         <div class="menu-column__icon">
-                          
+                          <img src="./asset/img/category/cate-1.1.svg" alt="" class="menu-column__icon-1">
+                          <img src="./asset/img/category/cate-1.2.svg" alt="" class="menu-column__icon-2">
+                        </div>
+                        <div class="menu-column__content">
+                          <h2 class="menu-column__heading">All Departments</h2>
+                          <ul class="menu-column__list">
+                            <li><a href="#" class="menu-column__link">Savings & Featured Shops</a></li>
+                            <li><a href="#" class="menu-column__link">Electronics</a></li>
+                            <li><a href="#" class="menu-column__link">Clothing, Shoes & Accessories</a></li>
+                          </ul>
                         </div>
                       </div>
                     </div>
@@ -30,16 +40,12 @@
               </li>
               <li class="navbar__item"><a href="#" class="navbar__link">Grocery<img src="./asset/icons/arrow-down.svg" alt="Grocery" class="icon navbar__arrow"></a>
               <div class="dropdown">
-                <div class="dropdown__inner">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae ea minima rerum velit quasi, quia et qui quaerat cupiditate! Consequuntur autem amet consectetur nisi aliquam quaerat assumenda sapiente sed tempore.
-                </div>
+                <!-- <div class="dropdown__inner"></div> -->
               </div>
               </li>
               <li class="navbar__item"><a href="#" class="navbar__link">Beauty<img src="./asset/icons/arrow-down.svg" alt="Beauty" class="icon navbar__arrow"></a>
               <div class="dropdown">
-                <div class="dropdown__inner">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae ea minima rerum velit quasi, quia et qui quaerat cupiditate! Consequuntur autem amet consectetur nisi aliquam quaerat assumenda sapiente sed tempore.
-                </div>
+                <!-- <div class="dropdown__inner"></div> -->
               </div>
               </li>
             </ul>
