--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -1210,6 +1210,12 @@ html.dark {
   --dropdown-shadow-color:rgba(23, 28, 40, 0.4);
   --dropdown-arrow-color: brightness(0) saturate(100%) invert(14%) sepia(6%) saturate(2671%) hue-rotate(186deg) brightness(97%) contrast(81%);
   --top-menu-border-color: #171c28;
+  --menu-column-icon-color: brightness(0) saturate(100%) invert(88%) sepia(3%) saturate(59%) hue-rotate(200deg) brightness(107%) contrast(96%);
+}
+@media (max-width: 991.98px) {
+  html.dark {
+    --box-shadow-color:rgba(0, 0 0, 0.20);
+  }
 }
 
 html {
@@ -1227,6 +1233,7 @@ html {
 @media (max-width: 991.98px) {
   html {
     --header-bg-color:#fff;
+    --box-shadow-color:rgba(237, 237 246, 0.20);
   }
 }
 
@@ -1237,6 +1244,11 @@ html {
 
 .header {
   background: var(--header-bg-color);
+}
+@media (max-width: 991.98px) {
+  .header {
+    box-shadow: 0px 20px 60px 10px var(--box-shadow-color);
+  }
 }
 
 .top-bar {
@@ -1257,7 +1269,7 @@ html {
     padding: 20px 0;
   }
 }
-@media (max-width: 575.98px) {
+@media (max-width: 767.98px) {
   .top-bar {
     justify-content: space-between;
     padding: 16px 0;
@@ -1265,23 +1277,17 @@ html {
 }
 
 .navbar {
-  margin-left: 144px;
+  margin-left: 129px;
 }
 @media (max-width: 1199.98px) {
   .navbar {
-    margin-left: 50px;
+    margin-left: 28px;
   }
 }
 @media (max-width: 991.98px) {
   .navbar {
     display: none;
   }
-}
-.navbar__item:first-child a {
-  padding-left: 0;
-}
-.navbar__item:last-child a {
-  padding-right: 0;
 }
 .navbar__item:hover .dropdown {
   display: block;
@@ -1303,7 +1309,7 @@ html {
   gap: 20px;
   margin-left: auto;
 }
-@media (max-width: 575.98px) {
+@media (max-width: 767.98px) {
   .top-act {
     margin-left: 0;
   }
@@ -1390,9 +1396,11 @@ html {
   display: none;
 }
 .dropdown__inner {
+  --inner-max-height:min(582px,(100vh - 158px));
+  --inner-padding:30px;
   position: relative;
-  max-height: min(582px, 100vh - 158px);
-  padding: 30px;
+  max-height: var(--inner-max-height);
+  padding: var(--inner-padding);
   border-radius: 20px;
   background: var(--dropdown-bg-color);
   box-shadow: 0px 40px 90px 20px --dropdown-bg-color;
@@ -1408,12 +1416,13 @@ html {
 }
 
 .top-menu {
-  height: 100%;
+  max-height: calc(var(--inner-max-height) - var(--inner-padding) * 2);
 }
 .top-menu__main {
   width: 292px;
-  height: 100%;
+  max-height: inherit;
   border-right: 1px solid var(--top-menu-border-color);
+  overflow-y: auto;
 }
 
 .menu-column {
@@ -1441,6 +1450,7 @@ html {
   position: absolute;
   bottom: 0;
   right: 0;
+  filter: var(--menu-column-icon-color);
 }
 .menu-column__heading {
   margin-top: 4px;
