--- a/scss/components/_dropdown.scss
+++ b/scss/components/_dropdown.scss
@@ -5,9 +5,11 @@
     padding-top: 50px;
     display:none;
     &__inner{
+        --inner-max-height:min(582px,(100vh - 158px));
+        --inner-padding:30px;
         position: relative;
-        max-height: min(582px,(100vh - 158px));
-        padding: 30px;
+        max-height: var(--inner-max-height);
+        padding: var(--inner-padding);
         border-radius: 20px;
         background:  var(--dropdown-bg-color);
         box-shadow: 0px 40px 90px 20px --dropdown-bg-color;
@@ -23,11 +25,12 @@
     }
 }
 .top-menu{
-    height: 100%;
+    max-height: calc(var(--inner-max-height) - var(--inner-padding) * 2); 
     &__main{
         width: 292px;
-        height: 100%;
+        max-height: inherit; // kế thừa từ top menu
         border-right: 1px solid var(--top-menu-border-color);
+        overflow-y: auto;
     }
 }
 .menu-column{
@@ -47,6 +50,7 @@
         width: 30px;
         height: 30px;
         object-fit: cover;
+
     }
     &__icon-2{
         width: 24px;
@@ -55,6 +59,7 @@
         position: absolute;
         bottom: 0;
         right: 0;
+        filter: var(--menu-column-icon-color);
     }
     &__heading{
             margin-top: 4px;
