--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -7,6 +7,9 @@
 .header{
     // background: #eeeeee;
     background: var(--header-bg-color);
+    @include abstracts.breakpoint(lg){
+        box-shadow: 0px 20px 60px 10px var(--box-shadow-color)
+    }
     
 }
 .top-bar{
@@ -24,15 +27,15 @@
         justify-content: space-between;
         padding: 20px 0;
     }
-    @include abstracts.breakpoint(sm){
+    @include abstracts.breakpoint(md){
         justify-content: space-between;
         padding: 16px 0;
     }
 }
 .navbar{
-    margin-left: 144px;
+    margin-left: 129px;
     @include abstracts.breakpoint(xl){
-        margin-left: 50px;
+        margin-left: 28px;
     }
     @include abstracts.breakpoint(lg){
        display: none
@@ -42,12 +45,6 @@
 
     }
     &__item{
-        &:first-child a{
-            padding-left: 0;
-        }
-        &:last-child a{
-            padding-right: 0;
-        }
         &:hover .dropdown{
             display: block;
         }
@@ -70,7 +67,7 @@
         @extend %flexItemCenter;
         gap: 20px;
         margin-left:auto;
-        @include abstracts.breakpoint(sm){
+        @include abstracts.breakpoint(md){
             margin-left: 0;
         } 
         &__group{
