--- a/scss/themes/_dark.scss
+++ b/scss/themes/_dark.scss
@@ -1,3 +1,4 @@
+@use "../abstracts";
 html.dark{
   --text-color:#fff;
   --icon-color: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(119deg) brightness(107%) contrast(106%);
@@ -6,9 +7,13 @@ html.dark{
 --top-act-group-bg-color:#292E39;
 --top-act-group-shadow:rgba(0, 0, 0, 0.20);
 --top-act-group-separate:#EDEDF6;
+  @include abstracts.breakpoint(lg){
+     --box-shadow-color:rgba(0, 0 0, 0.20);
+  };
 // Dropdown
   --dropdown-bg-color:#2f3441;
   --dropdown-shadow-color:rgba(23, 28, 40, 0.4);
   --dropdown-arrow-color: brightness(0) saturate(100%) invert(14%) sepia(6%) saturate(2671%) hue-rotate(186deg) brightness(97%) contrast(81%);
   --top-menu-border-color: #171c28;
+  --menu-column-icon-color:  brightness(0) saturate(100%) invert(88%) sepia(3%) saturate(59%) hue-rotate(200deg) brightness(107%) contrast(96%);
 }
