--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -1396,10 +1396,8 @@ html {
   display: none;
 }
 .dropdown__inner {
-  --inner-max-height:min(582px,(100vh - 158px));
   --inner-padding:30px;
   position: relative;
-  max-height: var(--inner-max-height);
   padding: var(--inner-padding);
   border-radius: 20px;
   background: var(--dropdown-bg-color);
@@ -1416,11 +1414,12 @@ html {
 }
 
 .top-menu {
-  max-height: calc(var(--inner-max-height) - var(--inner-padding) * 2);
+  --main-column-width: 292px;
+  position: relative;
 }
 .top-menu__main {
-  width: 292px;
-  max-height: inherit;
+  width: var(--main-column-width);
+  max-height: calc(min(582px, 100vh - 158px) - var(--inner-padding) * 2);
   border-right: 1px solid var(--top-menu-border-color);
   overflow-y: auto;
 }
@@ -1428,6 +1427,9 @@ html {
 .menu-column {
   display: flex;
   gap: 14px;
+}
+.menu-column + .menu-column {
+  margin-top: var(--inner-padding);
 }
 .menu-column__icon {
   position: relative;
@@ -1470,6 +1472,15 @@ html {
 .menu-column__link:hover {
   color: #0071dc;
   font-weight: 500;
+}
+
+.sub-menu {
+  position: absolute;
+  inset: 0 0 0 var(--main-column-width);
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
+  padding-left: var(--inner-padding);
 }
 
 /*# sourceMappingURL=main.css.map */
