--- a/templates/header.html
+++ b/templates/header.html
@@ -27,7 +27,49 @@
                         <div class="menu-column__content">
                           <h2 class="menu-column__heading">All Departments</h2>
                           <ul class="menu-column__list">
-                            <li><a href="#" class="menu-column__link">Savings & Featured Shops</a></li>
+                            <li>
+                              <a href="#" class="menu-column__link">Savings & Featured Shops</a>
+                            <!-- sub menu column 1 -->
+                              <div class="sub-menu">
+                              <div class="sub-menu__column">
+                                <div class="menu-column__icon">
+                                  <img src="./asset/img/category/cate-2.1.svg" alt="" class="menu-column__icon-1">
+                                  <img src="./asset/img/category/cate-2.2.svg" alt="" class="menu-column__icon-2">
+                                </div>
+                                <div class="menu-column__content">
+                                  <h2 class="menu-column__heading">TV & Video</h2>
+                                  <ul class="menu-column__list">
+                                    <li><a href="#" class="menu-column__link">Shop all TVs</a></li>
+                                    <li><a href="#" class="menu-column__link">TVs by Size</a></li>
+                                    <li><a href="#" class="menu-column__link">Smart TVs</a></li>
+                                    <li><a href="#" class="menu-column__link">Roku TVs</a></li>
+                                    <li><a href="#" class="menu-column__link">Streaming</a></li>
+                                    <li><a href="#" class="menu-column__link">TV Mounts & Accessories</a></li>
+                                    <li><a href="#" class="menu-column__link">DVD & Blu-Ray Players</a></li>
+                                  </ul>
+                                </div>
+                              </div>
+                              <!-- sub menu column 2 -->
+                              <div class="sub-menu__column">
+                                <div class="menu-column__icon">
+                                  <img src="./asset/img/category/cate-2.1.svg" alt="" class="menu-column__icon-1">
+                                  <img src="./asset/img/category/cate-2.2.svg" alt="" class="menu-column__icon-2">
+                                </div>
+                                <div class="menu-column__content">
+                                  <h2 class="menu-column__heading">TV & Video</h2>
+                                  <ul class="menu-column__list">
+                                    <li><a href="#" class="menu-column__link">Shop all TVs</a></li>
+                                    <li><a href="#" class="menu-column__link">TVs by Size</a></li>
+                                    <li><a href="#" class="menu-column__link">Smart TVs</a></li>
+                                    <li><a href="#" class="menu-column__link">Roku TVs</a></li>
+                                    <li><a href="#" class="menu-column__link">Streaming</a></li>
+                                    <li><a href="#" class="menu-column__link">TV Mounts & Accessories</a></li>
+                                    <li><a href="#" class="menu-column__link">DVD & Blu-Ray Players</a></li>
+                                  </ul>
+                                </div>
+                              </div>
+                            </div>
+                            </li>
                             <li><a href="#" class="menu-column__link">Electronics</a></li>
                             <li><a href="#" class="menu-column__link">Clothing, Shoes & Accessories</a></li>
                             <li><a href="#" class="menu-column__link">Home, Furniture & Appliances</a></li>
