--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -1393,7 +1393,7 @@ html {
   left: 0;
   width: min(1240px, 100%);
   padding-top: 50px;
-  display: none;
+  display: block;
 }
 .dropdown__inner {
   --inner-padding:30px;
@@ -1429,7 +1429,7 @@ html {
   gap: 14px;
 }
 .menu-column + .menu-column {
-  margin-top: var(--inner-padding);
+  margin-top: 22px;
 }
 .menu-column__icon {
   position: relative;
@@ -1437,18 +1437,23 @@ html {
   width: 36px;
   height: 36px;
 }
+@media (max-width: 1199.98px) {
+  .menu-column__icon {
+    display: none;
+  }
+}
 .menu-column__content {
   flex: 1;
 }
 .menu-column__icon-1 {
   width: 30px;
   height: 30px;
-  object-fit: cover;
+  object-fit: contain;
 }
 .menu-column__icon-2 {
   width: 24px;
   height: 24px;
-  object-fit: cover;
+  object-fit: contain;
   position: absolute;
   bottom: 0;
   right: 0;
@@ -1480,7 +1485,7 @@ html {
 .sub-menu {
   position: absolute;
   inset: 0 0 0 var(--main-column-width);
-  display: none;
+  display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 30px;
   padding-left: var(--inner-padding);
