--- a/scss/components/_dropdown.scss
+++ b/scss/components/_dropdown.scss
@@ -1,9 +1,10 @@
+@use "../abstracts";
 .dropdown{
     position: absolute;
     left: 0;
     width: min(1240px,100%);
     padding-top: 50px;
-    display:none;
+    display:block;
     &__inner{
         --inner-padding:30px;
         position: relative;
@@ -36,13 +37,16 @@
     display: flex;
     gap: 14px;
     + .menu-column{
-        margin-top: var(--inner-padding);
+        margin-top: 22px;
     }
     &__icon{
         position: relative;
         flex-shrink: 0; // chánh icon bị co lại
         width: 36px;
         height: 36px;
+        @include abstracts.breakpoint(xl){
+            display: none;
+        }
     }
     &__content{
         flex:1;
@@ -51,13 +55,13 @@
     &__icon-1{
         width: 30px;
         height: 30px;
-        object-fit: cover;
+        object-fit: contain;
 
     }
     &__icon-2{
         width: 24px;
         height: 24px;
-        object-fit: cover;
+        object-fit: contain;
         position: absolute;
         bottom: 0;
         right: 0;
@@ -92,7 +96,7 @@
 position: absolute;
 inset: 0 0 0  var(--main-column-width);
 
-display: none;
+display: grid;
 grid-template-columns: repeat(3, 1fr);
 gap: 30px;
 padding-left: var(--inner-padding);
