add js menu list, js dropdown add class item--active

--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -1393,7 +1393,7 @@ html {
   left: 0;
   width: min(1240px, 100%);
   padding-top: 50px;
-  display: block;
+  display: none;
 }
 .dropdown__inner {
   --inner-padding:30px;
@@ -1468,10 +1468,10 @@ html {
 .menu-column__list {
   margin-top: 19px;
 }
-.menu-column__item:hover .sub-menu {
+.menu-column__item:hover .sub-menu, .menu-column__item--active .sub-menu {
   display: grid;
 }
-.menu-column__item:hover > .menu-column__link {
+.menu-column__item--active > .menu-column__link, .menu-column__item:hover > .menu-column__link {
   color: #0071dc;
   font-weight: 500;
 }
@@ -1485,7 +1485,7 @@ html {
 .sub-menu {
   position: absolute;
   inset: 0 0 0 var(--main-column-width);
-  display: grid;
+  display: none;
   grid-template-columns: repeat(3, 1fr);
   gap: 30px;
   padding-left: var(--inner-padding);
