--- a/templates/header.html
+++ b/templates/header.html
@@ -14,7 +14,7 @@
             <ul class="navbar__list js-dropdown-list">
               <li class="navbar__item">
                 <a href="#" class="navbar__link">Departments <img src="./asset/icons/arrow-down.svg" alt="Departments" class="icon navbar__arrow"></a>
-              <div class="dropdown">
+              <div class="dropdown js-dropdown">
                 <div class="dropdown__inner">
                   <div class="top-menu">
                     <div class="top-menu__main">
@@ -26,7 +26,7 @@
                         </div>
                         <div class="menu-column__content">
                           <h2 class="menu-column__heading">All Departments</h2>
-                          <ul class="menu-column__list">
+                          <ul class="menu-column__list js-menu-list">
                             <li class="menu-column__item">
                               <a href="#" class="menu-column__link">Savings & Featured Shops</a>
                             <!-- sub menu column 1 -->
