menu item 2 navbar

--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -1393,7 +1393,6 @@ html {
   left: 0;
   width: min(1240px, 100%);
   padding-top: 50px;
-  display: none;
 }
 .dropdown__inner {
   --inner-padding:30px;
@@ -1415,11 +1414,12 @@ html {
 
 .top-menu {
   --main-column-width: 292px;
+  --max-inner-height:calc(min(582px,(100vh - 158px)) - var(--inner-padding) * 2);
   position: relative;
 }
 .top-menu__main {
   width: var(--main-column-width);
-  max-height: calc(min(582px, 100vh - 158px) - var(--inner-padding) * 2);
+  max-height: var(--max-inner-height);
   border-right: 1px solid var(--top-menu-border-color);
   overflow-y: auto;
 }
@@ -1490,6 +1490,14 @@ html {
   gap: 30px;
   padding-left: var(--inner-padding);
   overflow-y: auto;
+}
+.sub-menu--not-main {
+  position: initial;
+  inset: initial;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  height: var(--max-inner-height);
+  padding-left: 0;
 }
 
 /*# sourceMappingURL=main.css.map */
