--- a/scss/components/_dropdown.scss
+++ b/scss/components/_dropdown.scss
@@ -4,7 +4,7 @@
     left: 0;
     width: min(1240px,100%);
     padding-top: 50px;
-    display:none;
+    // display:none;
     &__inner{
         --inner-padding:30px;
         position: relative;
@@ -25,10 +25,11 @@
 }
 .top-menu{
     --main-column-width: 292px;
+    --max-inner-height:calc(min(582px,(100vh - 158px)) - var(--inner-padding) * 2);
     position: relative;
     &__main{
         width: var(--main-column-width);
-        max-height: calc(min(582px,(100vh - 158px)) - var(--inner-padding) * 2); // kế thừa từ top menu
+        max-height: var(--max-inner-height) ; // kế thừa từ top menu
         border-right: 1px solid var(--top-menu-border-color);
         overflow-y: auto;
     }
@@ -103,4 +104,12 @@ grid-template-columns: repeat(3, 1fr);
 gap: 30px;
 padding-left: var(--inner-padding);
 overflow-y: auto;
+&--not-main{
+    position: initial;
+    inset: initial;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    height: var(--max-inner-height);
+    padding-left: 0;
+}
 }
