--- a/scss/components/_dropdown.scss
+++ b/scss/components/_dropdown.scss
@@ -1,115 +1,134 @@
 @use "../abstracts";
-.dropdown{
+
+.dropdown {
     position: absolute;
     left: 0;
-    width: min(1240px,100%);
-    padding-top: 50px;
-    display:none;
-    &__inner{
-        --inner-padding:30px;
+
+    width: min(1240px, 100%);
+    padding-top: 54px;
+    display: none;
+   
+
+    &__inner {
+        --inner-padding: 30px;
+
         position: relative;
+         border: 1px solid;
+
         padding: var(--inner-padding);
+
         border-radius: 20px;
-        background:  var(--dropdown-bg-color);
-        box-shadow: 0px 40px 90px 20px --dropdown-bg-color;
-        border: 1px solid;
-        &::before{
-                content: url(../icons/dropdown-arrow.svg);
-                position: absolute;
-                top: -13px;
-                left: var(--arrow-left-pos);
-                translate: -50%;
-                filter: var(--dropdown-arrow-color);
+        background: var(--dropdown-bg-color);
+        box-shadow: 0px 40px 90px 20px var(--dropdown-shadow-color);
+
+        &::before {
+            content: url("../icons/dropdown-arrow.svg");
+            position: absolute;
+            top: -13px;
+            left: var(--arrow-left-pos);
+            translate: -50%;
+            filter: var(--dropdown-arrow-color);
         }
     }
 }
-.top-menu{
+
+.top-menu {
     --main-column-width: 292px;
-    --max-inner-height:calc(min(582px,(100vh - 158px)) - var(--inner-padding) * 2);
+
     position: relative;
-    &__main{
+
+    &__main {
         width: var(--main-column-width);
-        max-height: var(--max-inner-height) ; // kế thừa từ top menu
+        height: calc(min(582px, 100vh - 158px) - var(--inner-padding) * 2);
         border-right: 1px solid var(--top-menu-border-color);
         overflow-y: auto;
     }
 }
-.menu-column{
+
+.menu-column {
     display: flex;
     gap: 14px;
-    + .menu-column{
+
+    + .menu-column {
         margin-top: 22px;
     }
-    
-    &__icon{
+
+    &__icon {
         position: relative;
-        flex-shrink: 0; // chánh icon bị co lại
+
+        flex-shrink: 0;
         width: 36px;
         height: 36px;
-        @include abstracts.breakpoint(xl){
+
+        @include abstracts.breakpoint(xl) {
             display: none;
         }
     }
-    &__content{
-        flex:1;
-    }   
-    &__icon-1{
+
+    &__content {
+        flex: 1;
+    }
+
+    &__icon-1 {
         width: 30px;
         height: 30px;
         object-fit: contain;
-
     }
-    &__icon-2{
+
+    &__icon-2 {
+        position: absolute;
+        right: 0;
+        bottom: 0;
+
         width: 24px;
         height: 24px;
         object-fit: contain;
-        position: absolute;
-        bottom: 0;
-        right: 0;
         filter: var(--menu-column-icon-color);
     }
-    &__heading{
-            margin-top: 4px;
-            font-size: 1.6rem;
-            font-weight: 500;
-            line-height:  150% ;
-        }
-    &__list{
-        margin-top: 19px;
-        @include abstracts.breakpoint(lg){
-            margin-top: 0;
-        }
-        
+
+    &__heading {
+        margin-top: 4px;
+        font-size: 1.6rem;
+        font-weight: 500;
+        line-height: 150%;
     }
-    &__item{
-        &:hover .sub-menu,
-        &--active .sub-menu{
+
+    &__list {
+        margin-top: 19px;
+    }
+
+    &__item {
+        &--active .sub-menu {
             display: grid;
         }
-        // gap: 14px;
     }
+
     &__item--active > &__link,
-    &__item:hover > &__link{
+    &__item:hover > &__link {
         color: #0071dc;
         font-weight: 500;
     }
-    &__link{
+
+    &__link {
         display: block;
         padding: 7px 0;
         font-size: 1.4rem;
-        line-height: 142.857%; /* 142.857% */
+        line-height: 142.857%;
     }
 }
-.sub-menu{
-position: absolute;
-inset: 0 0 0  var(--main-column-width);
 
-display: none;
-grid-template-columns: repeat(3, 1fr);
-gap: 30px;
-padding-left: var(--inner-padding);
-overflow-y: auto;
-&--not-main{
+.sub-menu {
+    position: absolute;
+    inset: 0 0 0 var(--main-column-width);
+
+    display: none;
+    grid-template-columns: repeat(3, 1fr);
+    gap: var(--inner-padding);
+
+    padding-left: var(--inner-padding);
+
+    overflow-y: auto;
+    &--not-main{
     position: initial;
     inset: initial;
     display: grid;
