--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -38,15 +38,61 @@
         margin-left: 28px;
     }
     @include abstracts.breakpoint(lg){
-       display: none
+    //    display: none
+    position: fixed;
+    inset: 0 50% 0 0;
+    background: #fff;
+    margin-left: 0;
+    border: 1px solid;
+    z-index: 2;
+    padding: 20px 0;
+    translate:-100%;
+    transition: translate 0.5s;
+        &.show{
+            translate: 0;
+        }
+        &.show ~ &__overlay{
+            visibility: visible;
+            opacity: 1;
+        }
+    }
+    &__close-btn{
+        display: none;
+        @include abstracts.breakpoint(lg){
+            display: block;
+            padding:10px 40px;
+            z-index: 2;
+        }
+    }
+    &__overlay{
+        visibility: hidden;
+        opacity: 0;
+        @include abstracts.breakpoint(lg){
+            position: fixed;
+            inset: 0;
+            background: rgba(0, 0, 0, 0.4);
+            z-index:1;
+            transition: opacity,visibility;
+            transition-duration: 0.5s;
+        }
     }
     &__list{
         @extend %flexItemCenter;
+        @include abstracts.breakpoint(lg){
+            flex-direction: column;
+            align-items: flex-start;
+        }
 
     }
     &__item{
         &:hover .dropdown{
             display: block;
+        }
+        @include abstracts.breakpoint(lg){
+            width: 100%;
+            &:hover .dropdown{
+            display: none;
+        }
         }
     }
     &__link{
@@ -58,6 +104,13 @@
         font-style: normal;
         font-weight: 500;
         line-height:  146.667%;
+        @include abstracts.breakpoint(lg){
+            justify-content: space-between;
+            padding: 0 40px;
+
+            font-size:1.6rem;
+            line-height: 150%;;
+        }
     }
     &__arrow{
         margin-top: 4px;
