--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -81,6 +81,8 @@
         @include abstracts.breakpoint(lg){
             flex-direction: column;
             align-items: flex-start;
+            overflow-y: auto;
+            height: calc(100% - 26px);
         }
 
     }
