--- a/templates/header.html
+++ b/templates/header.html
@@ -11,24 +11,24 @@
        </a>
        <!-- Navbar -->
         <nav id="navbar" class="navbar hide">
-          <button class="navbar__close-btn js-toggle" toggle-target="#navbar">
+          <button class="navbar__close-btn js-toggle d-none d-lg-block" toggle-target="#navbar">
             <img src="./asset/icons/arrow-left.svg" alt="Arrow left">
           </button>
             <ul class="navbar__list js-dropdown-list">
               <li class="navbar__item">
-                <a href="#" class="navbar__link">Departments <img src="./asset/icons/arrow-down.svg" alt="Departments" class="icon navbar__arrow"></a>
+                <a href="#!" class="navbar__link">Departments <img src="./asset/icons/arrow-down.svg" alt="Departments" class="icon navbar__arrow"></a>
               <div hidden class="dropdown js-dropdown">
                 <div class="dropdown__inner">
                   <div class="top-menu">
                     <div class="top-menu__main">
                       <!-- Menu column -->
                       <div class="menu-column">
-                        <div class="menu-column__icon">
+                        <div class="menu-column__icon d-none d-lg-none">
                           <img src="./asset/img/category/cate-1.1.svg" alt="" class="menu-column__icon-1">
                           <img src="./asset/img/category/cate-1.2.svg" alt="" class="menu-column__icon-2">
                         </div>
                         <div class="menu-column__content">
-                          <h2 class="menu-column__heading">All Departments</h2>
+                          <h2 class="menu-column__heading d-none d-lg-none">All Departments</h2>
                           <ul class="menu-column__list js-menu-list">
                             <li class="menu-column__item">
                               <a href="#" class="menu-column__link">Savings & Featured Shops</a>
@@ -154,7 +154,7 @@
                 </div>
               </div>
               </li>
-              <li class="navbar__item"><a href="#" class="navbar__link">Grocery<img src="./asset/icons/arrow-down.svg" alt="Grocery" class="icon navbar__arrow"></a>
+              <li class="navbar__item"><a href="#!" class="navbar__link">Grocery<img src="./asset/icons/arrow-down.svg" alt="Grocery" class="icon navbar__arrow"></a>
               <div class="dropdown js-dropdown">
                 <div class="dropdown__inner">
                   <div class="top-menu">
@@ -266,7 +266,7 @@
                 </div>
               </div>
               </li>
-              <li class="navbar__item"><a href="#" class="navbar__link">Beauty<img src="./asset/icons/arrow-down.svg" alt="Beauty" class="icon navbar__arrow"></a>
+              <li class="navbar__item"><a href="#!" class="navbar__link">Beauty<img src="./asset/icons/arrow-down.svg" alt="Beauty" class="icon navbar__arrow"></a>
               <div class="dropdown">
                 <!-- <div class="dropdown__inner"></div> -->
               </div>
@@ -277,7 +277,7 @@
          <div class="navbar__overlay js-toggle" toggle-target="#navbar"></div>
         <!-- Actions -->
          <div class="top-act">
-          <div class="top-act__group top-act__group--single">
+          <div class="top-act__group  d-none d-lg-block top-act__group--single">
             <button class="top-act__btn">
               <img src="./asset/icons/search.svg" alt="" class="icon top-act__icon">
             </button>
