responsive navbar lg

--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -1377,7 +1377,6 @@ html {
     inset: 0 50% 0 0;
     background: #fff;
     margin-left: 0;
-    border: 1px solid;
     z-index: 2;
     padding: 20px 0;
     translate: -100%;
@@ -1433,6 +1432,9 @@ html {
   .navbar__item:hover .dropdown {
     display: none;
   }
+  .navbar__item--active .dropdown {
+    display: block !important;
+  }
 }
 .navbar__link {
   gap: 6px;
@@ -1453,6 +1455,16 @@ html {
 }
 .navbar__arrow {
   margin-top: 4px;
+}
+@media (max-width: 991.98px) {
+  .navbar__arrow {
+    rotate: -90deg;
+  }
+}
+@media (max-width: 991.98px) {
+  .navbar__item--active .navbar__arrow {
+    rotate: 0deg;
+  }
 }
 
 .top-act {
@@ -1548,14 +1560,12 @@ html {
 @media (max-width: 991.98px) {
   .dropdown {
     position: initial;
-    display: block;
     padding-top: 0px;
   }
 }
 .dropdown__inner {
   --inner-padding: 30px;
   position: relative;
-  border: 1px solid;
   padding: var(--inner-padding);
   border-radius: 20px;
   background: var(--dropdown-bg-color);
@@ -1658,6 +1668,11 @@ html {
 .menu-column__list {
   margin-top: 19px;
 }
+@media (max-width: 991.98px) {
+  .menu-column__list {
+    margin-top: 0;
+  }
+}
 .menu-column__item--active .sub-menu {
   display: grid;
 }
@@ -1688,6 +1703,7 @@ html {
     grid-template-columns: 1fr;
     height: var(--max-inner-height);
     padding-left: 0;
+    display: none;
   }
 }
 .sub-menu--not-main {
@@ -1697,6 +1713,13 @@ html {
   grid-template-columns: repeat(4, 1fr);
   height: var(--max-inner-height);
   padding-left: 0;
+}
+@media (max-width: 991.98px) {
+  .sub-menu--not-main {
+    grid-template-columns: 1fr;
+    height: auto;
+    display: none;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
