--- a/templates/header.html
+++ b/templates/header.html
@@ -23,12 +23,12 @@
                     <div class="top-menu__main">
                       <!-- Menu column -->
                       <div class="menu-column">
-                        <div class="menu-column__icon d-none d-lg-none">
+                        <div class="menu-column__icon d-lg-none">
                           <img src="./asset/img/category/cate-1.1.svg" alt="" class="menu-column__icon-1">
                           <img src="./asset/img/category/cate-1.2.svg" alt="" class="menu-column__icon-2">
                         </div>
                         <div class="menu-column__content">
-                          <h2 class="menu-column__heading d-none d-lg-none">All Departments</h2>
+                          <h2 class="menu-column__heading d-lg-none">All Departments</h2>
                           <ul class="menu-column__list js-menu-list">
                             <li class="menu-column__item">
                               <a href="#" class="menu-column__link">Savings & Featured Shops</a>
