responsive nabar lg md

--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -1298,6 +1298,8 @@ html.dark {
   --dropdown-arrow-color: brightness(0) saturate(100%) invert(14%) sepia(6%) saturate(2671%) hue-rotate(186deg) brightness(97%) contrast(81%);
   --top-menu-border-color: #171c28;
   --menu-column-icon-color: brightness(0) saturate(100%) invert(88%) sepia(3%) saturate(59%) hue-rotate(200deg) brightness(107%) contrast(96%);
+  --sidebar-bg:#292e39;
+  --sidebar-shadow:rgba(23, 28, 40, 0.4);
 }
 @media (max-width: 991.98px) {
   html.dark {
@@ -1316,6 +1318,8 @@ html {
   --dropdown-bg-color:#fff;
   --dropdown-shadow-color:rgba(200, 200, 200, 0.4);
   --top-menu-border-color: #d2d1d6;
+  --sidebar-bg:#fff;
+  --sidebar-shadow:rgba(23, 28, 40, 0.4);
 }
 @media (max-width: 991.98px) {
   html {
@@ -1375,7 +1379,8 @@ html {
   .navbar {
     position: fixed;
     inset: 0 50% 0 0;
-    background: #fff;
+    border-radius: 0 20px 20px 0;
+    background: var(--sidebar-bg);
     margin-left: 0;
     z-index: 2;
     padding: 20px 0;
@@ -1384,10 +1389,16 @@ html {
   }
   .navbar.show {
     translate: 0;
+    box-shadow: 0px 40px 90px 20px var(--sidebar-shadow);
   }
   .navbar.show ~ .navbar__overlay {
     visibility: visible;
     opacity: 1;
+  }
+}
+@media (max-width: 575.98px) {
+  .navbar {
+    inset: 0 20% 0 0;
   }
 }
 .navbar__close-btn {
@@ -1398,6 +1409,11 @@ html {
     display: block;
     padding: 10px 40px;
     z-index: 2;
+  }
+}
+@media (max-width: 575.98px) {
+  .navbar__close-btn {
+    padding: 0 20px 10px;
   }
 }
 .navbar__overlay {
@@ -1419,7 +1435,17 @@ html {
     flex-direction: column;
     align-items: flex-start;
     overflow-y: auto;
-    height: calc(100% - 26px);
+    height: calc(100% - 40px);
+  }
+}
+@media (max-width: 767.98px) {
+  .navbar__list {
+    height: calc(100% - 140px);
+  }
+}
+@media (max-width: 575.98px) {
+  .navbar__list {
+    height: calc(100% - 124px);
   }
 }
 .navbar__item:hover .dropdown {
@@ -1451,6 +1477,12 @@ html {
     padding: 0 40px;
     font-size: 1.6rem;
     line-height: 150%;
+  }
+}
+@media (max-width: 575.98px) {
+  .navbar__link {
+    height: 44px;
+    padding: 0 20px;
   }
 }
 .navbar__arrow {
@@ -1516,6 +1548,27 @@ html {
   width: 50px;
   height: 50px;
   border-radius: 8px;
+}
+
+.nav-btn {
+  height: 50px;
+  align-items: center;
+  padding: 0 40px;
+}
+@media (max-width: 575.98px) {
+  .nav-btn {
+    height: 44px;
+    padding: 0 20px;
+  }
+}
+.nav-btn__title, .nav-btn__qnt {
+  margin-left: 16px;
+  font-size: 1.5rem;
+  line-height: 146.667%;
+  font-weight: 500;
+}
+.nav-btn__qnt {
+  margin-left: auto;
 }
 
 .logo {
