--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -41,7 +41,9 @@
     //    display: none
     position: fixed;
     inset: 0 50% 0 0;
-    background: #fff;
+    border-radius: 0 20px 20px 0;
+    background: var(--sidebar-bg);
+    
     margin-left: 0;
     z-index: 2;
     padding: 20px 0;
@@ -49,11 +51,15 @@
     transition: translate 0.5s;
         &.show{
             translate: 0;
+            box-shadow: 0px 40px 90px 20px var(--sidebar-shadow);
         }
         &.show ~ &__overlay{
             visibility: visible;
             opacity: 1;
         }
+    }
+    @include abstracts.breakpoint(sm){
+        inset: 0 20% 0 0;
     }
     &__close-btn{
         display: none;
@@ -61,6 +67,9 @@
             display: block;
             padding:10px 40px;
             z-index: 2;
+        }
+        @include abstracts.breakpoint(sm){
+            padding: 0 20px 10px;
         }
     }
     &__overlay{
@@ -81,9 +90,14 @@
             flex-direction: column;
             align-items: flex-start;
             overflow-y: auto;
-            height: calc(100% - 26px);
+            height: calc(100% - 40px);
         }
-
+        @include abstracts.breakpoint(md){
+            height: calc(100% - 140px);
+        }
+        @include abstracts.breakpoint(sm){
+            height: calc(100% - 124px);
+        }
     }
     &__item{
         &:hover .dropdown{
@@ -114,6 +128,10 @@
 
             font-size:1.6rem;
             line-height: 150%;;
+        }
+        @include abstracts.breakpoint(sm){
+            height: 44px;
+            padding: 0 20px;
         }
     }
     &__arrow{
@@ -177,4 +195,26 @@
         height: 50px;
         border-radius: 8px;
     }
+}
+
+.nav-btn{
+    height: 50px;
+    align-items: center;
+    padding: 0 40px;
+    @include abstracts.breakpoint(sm){
+        height: 44px;
+        padding: 0 20px;
+
+    }
+    &__title{
+        margin-left: 16px;
+        font-size: 1.5rem;
+        line-height: 146.667%;
+        font-weight: 500;
+    }
+    &__qnt{
+        @extend .nav-btn__title;
+        margin-left: auto;
+    }
+    
 }
