--- a/scss/themes/_dark.scss
+++ b/scss/themes/_dark.scss
@@ -16,4 +16,8 @@ html.dark{
   --dropdown-arrow-color: brightness(0) saturate(100%) invert(14%) sepia(6%) saturate(2671%) hue-rotate(186deg) brightness(97%) contrast(81%);
   --top-menu-border-color: #171c28;
   --menu-column-icon-color: brightness(0) saturate(100%) invert(88%) sepia(3%) saturate(59%) hue-rotate(200deg) brightness(107%) contrast(96%);
+// Sidebar
+  --sidebar-bg:#292e39;
+  --sidebar-shadow:rgba(23, 28, 40, 0.4);
+
 }
