--- a/scss/themes/_light.scss
+++ b/scss/themes/_light.scss
@@ -15,4 +15,7 @@ html{
   --dropdown-bg-color:#fff;
   --dropdown-shadow-color:rgba(200, 200, 200, 0.4);
   --top-menu-border-color: #d2d1d6;
+  // Sidebar
+  --sidebar-bg:#fff;
+  --sidebar-shadow:rgba(23, 28, 40, 0.4);
 }
