--- a/templates/header.html
+++ b/templates/header.html
@@ -12,8 +12,20 @@
        <!-- Navbar -->
         <nav id="navbar" class="navbar hide">
           <button class="navbar__close-btn js-toggle d-none d-lg-block" toggle-target="#navbar">
-            <img src="./asset/icons/arrow-left.svg" alt="Arrow left">
+            <img src="./asset/icons/arrow-left.svg" alt="Arrow left" class="icon">
           </button>
+          <a href="#!" class="nav-btn d-none d-md-flex ">
+            <img src="./asset/icons/cart.svg" alt="Card" class="nav-btn__icon icon">
+            <span class="nav-btn__title">Card</span>
+            <span class="nav-btn__qnt">3</span>
+
+          </a>
+          <a href="#!" class="nav-btn d-none d-md-flex">
+            <img src="./asset/icons/heart.svg" alt="Card" class="nav-btn__icon icon">
+            <span class="nav-btn__title">Favorite</span>
+            <span class="nav-btn__qnt">3</span>
+
+          </a>
             <ul class="navbar__list js-dropdown-list">
               <li class="navbar__item">
                 <a href="#!" class="navbar__link">Departments <img src="./asset/icons/arrow-down.svg" alt="Departments" class="icon navbar__arrow"></a>
