--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -90,6 +90,7 @@
             flex-direction: column;
             align-items: flex-start;
             overflow-y: auto;
+            overscroll-behavior: contain;
             height: calc(100% - 40px);
         }
         @include abstracts.breakpoint(md){
